--- a/views/AddTimings.xaml
+++ b/views/AddTimings.xaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
-        <viewModel:AddTimings/>
+        <viewModel:AddTimingsViewModel/>
     </UserControl.DataContext>
 
     <Grid Grid.Row="0" >
@@ -48,7 +48,7 @@
                 <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10">
 
                     <TextBlock x:Name="text1" Text="Select Consultation Type:" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
-                    <ComboBox x:Name="ConsultType1" Width="250" VerticalAlignment="Center" Margin="50,0,0,0" />
+                    <ComboBox x:Name="ConsultType1" Width="250" VerticalAlignment="Center" Margin="50,0,0,0" SelectionChanged="ConsultType1_SelectionChanged"/>
                 </StackPanel>
 
 
@@ -116,7 +116,7 @@
 
                 </Canvas>
 
-                <Button x:Name="btn1"  Grid.Row="9" Content="Add Timing" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="120,10,0,0" Padding="15 5" Width="120" Height="30" Background="CadetBlue" Foreground="black" FontSize="16" FontWeight="Bold" BorderThickness="0">
+                <Button x:Name="btn1"  Grid.Row="9" Content="Add Timing" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="120,10,0,0" Padding="15 5" Width="120" Height="30" Background="CadetBlue" Foreground="black" FontSize="16" FontWeight="Bold" BorderThickness="0" Click="btn1_Click">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Border CornerRadius="5">
