--- a/views/Window2.xaml
+++ b/views/Window2.xaml
@@ -16,7 +16,7 @@
 
     <Window.Resources>
 
-        <DataTemplate DataType="{x:Type viewModel:AddTimings}">
+        <DataTemplate DataType="{x:Type viewModel:AddTimingsViewModel}">
             <local:AddTimings/>
         </DataTemplate>
 
